<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_weight="2.5"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher"
        android:transitionName="image_transition" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_weight="7.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#FF0000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:transitionName="name_transition" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="italic"
            android:transitionName="description_transition" />
    </LinearLayout>

</LinearLayout>