<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddChangePlaceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_add"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher"
                android:transitionName="image_transition" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:onClick="btnAddPicture_onclick"
                    android:src="@drawable/ic_photo_library_black_24dp" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:onClick="btnTakePicture_onclick"
                    android:src="@drawable/ic_photo_camera_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/name_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/name"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:transitionName="name_transition" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/todo"
                    android:onClick="btnLocationSearch_onclick"
                    android:src="@drawable/ic_location_searching_black_24dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/location_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="textCapSentences|textAutoCorrect"
                android:transitionName="location_transition" />

            <EditText
                android:id="@+id/description_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textCapSentences|textAutoCorrect"
                android:transitionName="description_transition" />

            <EditText
                android:id="@+id/url_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:inputType="textUri"
                android:transitionName="url_transition" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phone_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:transitionName="phone_transition" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>